tests/machine/x/c/substring_builtin.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>

static const char* substring(const char *s, int start, int end) {
    static char buf[1024];
    int n = end - start;
    strncpy(buf, s + start, n);
    buf[n] = '\0';
    return buf;
}

int main() {
    printf("%s\n", substring("mochi", 1, 4));
    return 0;
}
